# synth

./: .gitignore  Cargo.toml  README.org
src/: audio.rs  main.rs  tui_util.rs  ui.rs  util.rs
src/amp/: mod.rs  vca.rs
src/arp/: basic.rs  mod.rs
src/env/: adsr.rs  mod.rs
src/fixed/: mod.rs
src/mix/: mixer.rs  mod.rs
src/osc/: func_osc.rs  mod.rs  wave_table_osc.rs
src/rvb/: basic_reverb.rs  mod.rs
src/seq/: basic.rs  mod.rs
