[package]
name = "jsynth"
version = "0.1.0"
authors = ["Jim Keener <jim@jimkeener.com>"]
edition = "2018"
license = "AGPL-3.0-or-late"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav = "0.6.0"
cpal = "0.13.3"
anyhow = "1.0.40"
tui = "0.14.0"
argh = "0.1"
termion = "1.5.6"
lazy_static = "1.4.0"
rand = "0.8.3"
